fix moving inner link tab

--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,12 @@
     "tabs",
     "tabGroups",
     "storage",
-    "background"
+    "background",
+    "webNavigation",
+    "webRequest"
   ],
+
+  "host_permissions": ["<all_urls>"],
   
   "background": {
     "service_worker": "background.js",
